--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=9191
 
 #db_configurations
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/electronic_store
+spring.datasource.url=jdbc:mysql://localhost:3306/deepali
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -15,6 +15,8 @@ spring.jpa.hibernate.ddl-auto=update
 user.profile.image.path=images/users/
 product.image.path=images/products/
 
-
+#file_config
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
 
