--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.jpa.hibernate.ddl-auto=update
 #Path config
 user.profile.image.path=images/users/
 product.image.path=images/products/
+category.image.path=images/category/
 
 #file_config
 spring.servlet.multipart.max-file-size=10MB
